# hello-skylicht

./: CMakeLists.txt  PlatformConfig.cmake  README.md  SkylichtConfig.cmake  SkylichtLibrary.cmake
.github/workflows/: build.yml
Source/Android/app/: build.gradle
Source/Android/app/src/main/java/com/skylicht/engine3d/: NativeInterface.java
Source/HelloWorld/: CMakeLists.txt  CMakeProject.cmake
Source/Physics/: CMakeLists.txt
Source/Physics/Source/: CViewInit.cpp
UnitTest/TestApp/: CMakeLists.txt
